--- a/deploy.yml
+++ b/deploy.yml
@@ -26,12 +26,18 @@ rules:
   - apiGroups: [""]
     resources:
       - services
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups: [""]
+    resources:
       - configmaps
     verbs:
       - get
       - list
       - watch
-
+      - update
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -57,6 +63,7 @@ rules:
       - configmaps
     verbs:
       - get
+      - list
       - watch
       - update
   - apiGroups: [""]
